fix: color contrast

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -11,21 +11,21 @@
 		font-display: swap;
 	} */
 
-  @font-face {
+	@font-face {
 		font-family: 'Poppins';
 		src: local('Poppins'), url('/fonts/Poppins-Bold.ttf');
 		font-weight: bold;
 		font-display: swap;
 	}
 
-  @font-face {
+	@font-face {
 		font-family: 'Poppins';
 		src: local('Poppins'), url('/fonts/Poppins-Medium.ttf');
 		font-weight: medium;
 		font-display: swap;
 	}
 
-  @font-face {
+	@font-face {
 		font-family: 'Poppins';
 		src: local('Poppins'), url('/fonts/Poppins-Light.ttf');
 		font-weight: 300;
@@ -73,7 +73,7 @@
 	}
 
 	h2.rotated {
-		@apply font-thin text-rose -rotate-3 -translate-x-0 sm:-translate-x-4 md:-translate-x-8 whitespace-nowrap;
+		@apply font-thin dark:text-rose text-pink -rotate-3 -translate-x-0 sm:-translate-x-4 md:-translate-x-8 whitespace-nowrap;
 	}
 
 	h3 {
